--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кексобукинг</title>
   <script src="vendor/leaflet/leaflet.js" defer></script>
+  <script src="vendor/nouislider/nouislider.js" defer></script>
   <script src="js/main.js" type="module"></script>
 </head>
 <body>
